--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dot_vim/bundle/vim-rails"]
 	path = dot_vim/bundle/vim-rails
 	url = https://github.com/tpope/vim-rails.git
+[submodule "dot_vim/bundle/snipMate"]
+	path = dot_vim/bundle/snipMate
+	url = https://github.com/vim-scripts/snipMate.git
