--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "dot_vim/bundle/Command-T"]
 	path = dot_vim/bundle/Command-T
 	url = https://github.com/wincent/Command-T.git
+[submodule "dot_vim/bundle/nerdcommenter"]
+	path = dot_vim/bundle/nerdcommenter
+	url = git://github.com/scrooloose/nerdcommenter.git
