--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "dot_vim/bundle/vim-fugitive"]
 	path = dot_vim/bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "dot_vim/bundle/ack.vim"]
+	path = dot_vim/bundle/ack.vim
+	url = https://github.com/mileszs/ack.vim.git
