--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,59 @@
 unbind C-b
 set -g prefix C-a
 
+set -g default-terminal 'screen-256color'
+set -g escape-time 1
+set -g base-index 1
+set -g pane-base-index 1
+
 set-window-option -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+set -g set-titles on
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+bind r source-file ~/.tmux.conf \; display "Reloaded config!"
+bind C-a send-prefix
+
+
+set -g status-justify centre
+setw -g monitor-activity on
+set -g visual-activity on
+
+
+
+
+#set -g status-fg white
+#set -g status-bg black
+
+#setw -g window-status-fg cyan
+#setw -g window-status-bg black
+#setw -g window-status-attr dim
+
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+#setw -g window-status-current-format '► #[fg=white]#I#[default] #W#F'
+#setw -g window-status-format '#[fg=yellow]#I#[default] #W#F'
+#
+
+#set -g status-left-length 40
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+
+
+#set -g status-right "#[fg=cyan] %d %b %R"
+#set -g status-utf8 on
+
+# soften status bar color from harsh green to light gray
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
+set -g renumber-windows on
