--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "vim/vim.symlink/bundle/vim-latex"]
 	path = vim/vim.symlink/bundle/vim-latex
 	url = https://github.com/jcf/vim-latex.git
+[submodule "vim/vim.symlink/bundle/vim-bundler"]
+	path = vim/vim.symlink/bundle/vim-bundler
+	url = git://github.com/tpope/vim-bundler.git
