--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,9 @@
 [submodule "vim/vim.symlink/bundle/vim-bundler"]
 	path = vim/vim.symlink/bundle/vim-bundler
 	url = git://github.com/tpope/vim-bundler.git
+[submodule "vim/vim.symlink/bundle/vim-dispatch"]
+	path = vim/vim.symlink/bundle/vim-dispatch
+	url = git://github.com/tpope/vim-dispatch.git
+[submodule "vim/vim.symlink/bundle/php.vim"]
+	path = vim/vim.symlink/bundle/php.vim
+	url = https://github.com/StanAngeloff/php.vim.git
