--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,12 @@
 [submodule "vim/vim.symlink/bundle/php.vim"]
 	path = vim/vim.symlink/bundle/php.vim
 	url = https://github.com/StanAngeloff/php.vim.git
+[submodule "vim/vim.symlink/bundle/vim-elixir"]
+	path = vim/vim.symlink/bundle/vim-elixir
+	url = https://github.com/elixir-lang/vim-elixir.git
+[submodule "vim/vim.symlink/bundle/editorconfig-vim"]
+	path = vim/vim.symlink/bundle/editorconfig-vim
+	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "vim/vim.symlink/bundle/vim-less"]
+	path = vim/vim.symlink/bundle/vim-less
+	url = https://github.com/groenewege/vim-less
