--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,21 @@
 unbind C-b
 set -g prefix C-a
 
+### General
+# utf 8
+setw -g utf8 on
+set-option -g status-utf8 on
+
+# begin on 1
+set -g base-index 1
+
+## reload config
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded config!"
+
+
 set -g default-terminal 'screen-256color'
 set -g escape-time 1
-set -g base-index 1
 set -g pane-base-index 1
 
 set-window-option -g mode-keys vi
@@ -16,8 +28,17 @@ set -g set-titles on
 
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-bind r source-file ~/.tmux.conf \; display "Reloaded config!"
 bind C-a send-prefix
+
+# TMux 2.0+ requires passing current path to preserve location
+unbind c; bind c new-window -c "#{pane_current_path}"
+
+# splitting panes
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+
+
 
 
 set -g status-justify centre
@@ -27,26 +48,25 @@ set -g visual-activity on
 
 
 
-#set -g status-fg white
-#set -g status-bg black
+set -g status-fg white
+set -g status-bg black
 
-#setw -g window-status-fg cyan
-#setw -g window-status-bg black
-#setw -g window-status-attr dim
+setw -g window-status-fg cyan
+setw -g window-status-bg black
+setw -g window-status-attr dim
 
-#setw -g window-status-current-fg white
-#setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
-#setw -g window-status-current-format '► #[fg=white]#I#[default] #W#F'
-#setw -g window-status-format '#[fg=yellow]#I#[default] #W#F'
-#
-
-#set -g status-left-length 40
-#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
+setw -g window-status-current-format '► #[fg=white]#I#[default] #W#F'
+setw -g window-status-format '#[fg=yellow]#I#[default] #W#F'
 
 
-#set -g status-right "#[fg=cyan] %d %b %R"
-#set -g status-utf8 on
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+
+
+set -g status-right "#[fg=cyan] %d %b %R"
 
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
@@ -57,3 +77,13 @@ set -g status-left ''
 set -g status-right ''
 
 set -g renumber-windows on
+
+set -g status-left "#[fg=red] #H#[fg=green]:#[fg=white]#S#[fg=green] |#[default]"
+
+set-option -g set-titles on
+set-option -g set-titles-string '#W #P #T' # window number,program name,active (or not)
+
+
+set -g status-interval 4
+set -g status-right "#[fg=cyan] %d %b %R #[fg=green] | #[fg=white]#(tmux-mem-cpu-load)#[fg=green] | #[fg=cyan]%H:%M #[default]"
+
